implementation/testdata/typechecker/error/classes/portfolio_test7.java
// This should give an error. Classes cannot extend themselves.

int main(){
    return 0;
        }

class A extends A{

}